--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "api.js",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "dependencies": {
     "call-of-duty-api": "git+https://github.com/bmmidei/Node-CallOfDuty.git",
-    "log4js": "^6.2.1"
+    "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
+    "log4js": "^6.3.0"
   },
   "devDependencies": {},
   "scripts": {
