--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "call-of-duty-api": "git+https://github.com/bmmidei/Node-CallOfDuty.git",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "firebase-admin": "^8.12.1",
     "log4js": "^6.3.0"
   },
   "devDependencies": {},
