--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "ascii-table": "0.0.9",
     "call-of-duty-api": "^1.2.0",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
